Reduce container min-width, fix incorrect start scale on mobiles

--- a/frontend/src/components/Layout/styles.scss
+++ b/frontend/src/components/Layout/styles.scss
@@ -6,7 +6,7 @@
     position: relative;
     min-height: 100%;
     height: max-content;
-    min-width: 640px;
+    min-width: 560px;
     display: flex;
     justify-content: center;
     background-color: cl(selected);
